overflow on container does stops scroll

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -74,6 +74,9 @@
   * {
     @apply border-border;
   }
+  /* * {
+  outline: 1px solid red;
+} */
   body {
     @apply bg-background text-foreground;
     font-feature-settings: "rlig" 1, "calt" 1;
